--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:h2:~/jooq
+spring.datasource.username=sa
+spring.datasource.password=
+spring.flyway.enabled=true
 
+spring.flyway.locations=classpath:db/migration
