--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:~/jooq
+spring.datasource.url=jdbc:h2:./jooq
 spring.datasource.username=sa
 spring.datasource.password=
 spring.flyway.enabled=true
